src/client/src/styles/main.scss
$brandBlack: #111111;
$darkGrey: #080603;
$earthRed: #bf5025;
$brandBlue: #36b8ad;
$brandBlueAccent: #83e3db;
$highlightGreen: #3fb83d;
$brandYellow: #afaf00;
$pudding: #bdcd6a;
$cream: #f1f9e9;
$purple: #8062cb;

* {
  box-sizing: border-box;
}

:root {
  font-size: 16px;
}

html {
  font-family: "Quicksand", sans-serif;
  font-optical-sizing: auto;
}

body {
  margin: 0;
  background: $darkGrey;
  color: $cream;
  min-height: 100vh;
}

#nav_main {
  position: sticky;
  top: 0;
  z-index: 1000;
}

.nav-bar {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
  background: $darkGrey;
}

#nav_logo_link {
  text-decoration: none;
}

#nav_logo {
  font-size: 1rem;
  margin: 0;
  font-weight: 400;
  display: inline-flex;
  align-items: center;
  transition: transform 0.1s ease;
  cursor: pointer;
  &:active {
    transform: scale(0.85);
  }
}

#nav_logo_image {
  width: 1.5rem;
  height: 1.5rem;
  margin-right: 0.25rem;
}

#gearlist {
  color: $brandBlue;
}
#dot {
  color: $brandYellow;
}

#studio {
  color: $earthRed;
}

#nav_toggle {
  // display: none;
  background: none;
  border: none;
  cursor: pointer;
  width: 2.25rem;
  height: 2rem;
  position: relative;
  padding: 0.25rem;
  span {
    display: block;
    width: 100%;
    height: 2px;
    background: $cream;
    margin: 5px 0;
    transition: all 0.3s ease;
    border-radius: 0.25rem;
  }

  &.active {
    span:nth-child(1) {
      transform: rotate(45deg) translate(5px, 5px);
    }
    span:nth-child(2) {
      opacity: 0;
    }
    span:nth-child(3) {
      transform: rotate(-45deg) translate(5px, -5px);
    }
  }
}

.nav-list {
  height: 0px;
  position: absolute;
  top: 64px;
  right: 0;
  left: 0;
  overflow-y: hidden;
  list-style: none;
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0 0 1rem 0;
  background: #080603c4;
  box-shadow: 0px 9px 1rem 16px rgba(0, 0, 0, 0.32);
  backdrop-filter: blur(0.25rem);
  li {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  &.active {
    height: auto;
    overflow-y: visible;
  }
}

.nav-link {
  color: $cream;
  text-transform: uppercase;
  text-decoration: none;
  font-size: 0.9rem;
  transition: color 0.3s ease;
  padding: 1rem 1rem 1rem 1.5rem;
  display: block;
  background: linear-gradient(74deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.05));
  &:hover {
    color: #ff6347;
  }

  u {
    text-decoration: none;
    border-bottom: 1px solid #f1f9e940;
    padding-bottom: 0.25rem;
  }
}

.panel {
  margin: 1rem;
  padding: 1rem;
  border-radius: 0.5rem;
  background: $brandBlack;
  box-shadow: 0px 0px 1rem black;

  h2 {
    margin: 0;
  }
}

header {
  h1 {
    color: $brandBlueAccent;
  }
}

.input-group {
  position: relative;
  width: 100%;
  margin-top: 1rem;
  display: block;
  .icon-search {
    position: absolute;
    left: 1rem;
    top: 50%;
    transform: translateY(-50%);
    width: 1rem;
    height: 1rem;
    fill: #111111;
    pointer-events: none;
  }
}

.input {
  display: block;
  width: 100%;
  padding: 1rem;
  border-radius: 0.5rem;
  border: none;
  font-family: "Quicksand", sans-serif;
  box-shadow: 0px 0px 1rem black;
  color: #111;

  &.input-search {
    display: block;
    width: 100%;
    padding: 1rem 1rem 1rem 2.25rem;
    border-radius: 0.5rem;
    border: none;
    font-family: "Quicksand", sans-serif;
    box-shadow: 0px 0px 1rem black;
    color: #111;
  }
}

.rule-sm {
  max-width: 3rem;
  /* border: 0px; */
  border-width: 2px;
  border-color: #303939;
  margin: 1rem auto 1.25rem;
  border-style: solid;
}

.btn {
  padding: 1rem;
  background: linear-gradient(32deg, #000000, #1a1a1a, #040404);
  display: inline-flex;
  align-items: center;
  color: #f1f1f1;
  text-decoration: none;
  border-radius: 0.5rem;
  box-shadow:
    4px 4px 1rem rgba(0, 0, 0, 0.5882352941),
    inset 0px 0px 1rem rgba(0, 0, 0, 0.5);
  /* color: #111; */
  font-weight: 600;
  text-shadow: 4px 4px 0.25rem rgba(0, 0, 0, 1);
}

.btn-icon {
  margin-left: 0.5rem;
  width: 1rem;
  height: 1rem;
}

.text-center {
  text-align: center;
}

.section-icon {
  color: #afaf00;
  width: 3rem;
  height: 3rem;
  margin-bottom: 0.25rem;
  filter: drop-shadow(2px 4px 16px black);
}

.artist-list,
.instrument-list,
.amp-list,
.pedal-list,
.plugin-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  padding: 0;
  margin: 1rem 0 0 0;
  width: 100%;
  li {
    list-style: none;
    display: block;
  }
}

.artist-card,
.instrument-card,
.amp-card,
.pedal-card,
.plugin-card {
  position: relative;
  overflow: hidden;
  border-radius: 1rem;
  cursor: pointer;
  transition: transform 0.3s ease;

  box-shadow: 12px 12px 1rem rgba(0, 0, 0, 0.5);
  border-radius: 1rem;
  overflow: hidden;

  .overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    // background: rgba(0, 0, 0, 0.6);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: opacity 0.3s ease;
    padding: 0.5rem;
    z-index: 50;
    background: linear-gradient(0deg, rgb(0 0 0 / 93%), rgba(0, 0, 0, 0));
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
    h3 {
      margin: 0;
      font-size: 0.75rem;
      text-align: center;
      padding: 0.5rem;
    }
  }
}

.artist-photo,
.instrument-photo,
.amp-photo,
.pedal-photo,
.plugin-photo {
  position: relative;
  width: 100%;
  height: 100%;
  /* border-radius: 1rem; */
  z-index: 25;
}

.list-text {
  padding-left: 1.25rem;
}

.artist-grid {
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
}

.artist-picture {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#footer_main {
  text-align: center;
  padding: 1rem;
  background: linear-gradient(0deg, $darkGrey, $brandBlack);
  color: $cream;
  border-top-right-radius: 0.5rem;
  border-top-left-radius: 0.5rem;
  margin: 1rem;
  font-size: 0.75rem;
}

